tests/NormalTests/paczka1/small_fuzzy/35321668.err
Error in line 4: 0GxhV28pW S63 4,3
Error in line 2: S394 A265 82,5
Error in line 12: OD58oUkt A265 73,2
